2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* backtrace.c (RA): Return if __builtin_frame_address returns 0.
	Correctly assign the return address to the appropriate slot in
	ARRAY.
	(backtrace): Limit to four stack frames.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* _exit.c (_exit): Destroy the activity by finding its associated
	storage and deallocating that.  If killing the activity fails, try
	the same approach with the thread.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (routines, routines_subexp, routines_objects)
	(routines_varname, $(routines_objects)): Remove.  Partially moved to
	newlib.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* errno.h: Protect from multiple inclusion.  Don't include the
	next errno.h.  Include <hurd/error.h>.
	(errno): Don't undef.
	(error_t): Define.

2008-01-26  Neal H. Walfield  <neal@gnu.org>

	* features.h: Don't include <gnu/stubs.h>.
	(__GNU_LIBRARY__): Don't define.
	(__GLIBC__): Likewise.
	(__GLIBC_MINOR__): Likewise.
	(__GLIBC_PREREQ): Likewise.
	(__USE_LARGEFILE): Likewise.
	(__USE_LARGEFILE64): Likewise.
	(__USE_EXTERN_INLINES): Define even if __extern_inline is not
	defined.

2008-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* features.h: New file, from today's glibc CVS HEAD.

2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* loader.h: Include <stdint.h> and <stdbool.h>.  Don't include
	<l4/types.h>, "cap.h", or "as.h".
	(struct activity): Remove forward.
	(struct thread): Remove forward.
	(loader_allocate_object_callback_t): New definition.
	(loader_lookup_object_callback_t): New definition.
	(loader_elf_load): Change prototype to take an allocation, a
	lookup, a start, an end, and an entry arguments.  Return a
	boolean.
	* loader.c: Don't include "cap.h", "object.h", "as.h" or
	"thread.h".  Include <l4.h>.
	(loader_elf_load): Change prototype to take an
	allocation, a lookup, a start, an end, and an entry arguments.
	Return a boolean.  Don't panic on an error.  Instead, print some